@@ -1,3 +1,8 @@
+2008-10-29  Stefan Schulze Frielinghaus  <xxschulz@de.ibm.com>
+
+	* configure.ac [spu-*-*]: Do not set skipdirs.
+	* configure: Re-generate.
+
 2008-10-29  Bernd Schmidt  <bernd.schmidt@analog.com>
 
 	* MAINTAINERS (Various Maintainers): Add myself to reload.
